Input fields clear after button push

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <h2>Employee Expenses</h2>
-    <section>
+    <section id="employeeInputs">
       <input id="firstNameInput">First Name</input>
       <br></br>
       <input id="lastNameInput">Last Name</input>
