completed employee list

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h2>Employee Expenses</h2>
+    <h2>Add Employees</h2>
     <section id="employeeInputs">
       <input id="firstNameInput">First Name</input>
       <br></br>
@@ -20,6 +20,11 @@
       <input id="annualSalaryInput">Annual Salary</input>
       <br></br>
       <button id="inputNewEmployee">Add Employee</button>
+    </section>
+    <h2>Employee List</h2>
+    <section>
+      <ul id=employeeList>
+      </ul>
     </section>
   </body>
 
