total monthly salary added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       <ul id=employeeList>
       </ul>
     </section>
+    <section id="monthlyPayment">
+      <h2>Monthly Employee Payment</h2>
+      <div id="totalPayment"></div>
+    </section>
   </body>
 
 </html>
