--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Salary Calculator</title>
     <script src="jquery-3.3.1.js" charset="utf-8"></script>
     <script src="employees.js" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="bizstyle.css">
   </head>
 
   <body>
@@ -22,7 +23,7 @@
       <button id="inputNewEmployee">Add Employee</button>
     </section>
     <h2>Employee List</h2>
-    <section>
+    <section id="employees">
       <ul id=employeeList>
       </ul>
     </section>
