server working and running express

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Salary Calculator</title>
-    <script src="jquery-3.3.1.js" charset="utf-8"></script>
-    <script src="employees.js" charset="utf-8"></script>
-    <link rel="stylesheet" type="text/css" href="bizstyle.css">
+    <script src="scripts/jquery-3.3.1.js" charset="utf-8"></script>
+    <script src="scripts/employees.js" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="styles/bizstyle.css">
   </head>
 
   <body>
